--- a/src/br/com/alphacars/telas/TelaUsuarios.form
+++ b/src/br/com/alphacars/telas/TelaUsuarios.form
@@ -246,7 +246,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="txtformCPFbusca" min="-2" pref="112" max="-2" attributes="0"/>
+                  <Component id="txtformCPFbusca" min="-2" pref="104" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                   <Component id="btnPesquisar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -346,10 +346,12 @@
                                   <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtLogradouro" alignment="0" min="-2" pref="230" max="-2" attributes="0"/>
                                   <Component id="txtNumero" alignment="0" min="-2" pref="60" max="-2" attributes="0"/>
-                                  <Component id="txtformCep" alignment="0" min="-2" pref="80" max="-2" attributes="0"/>
+                                  <Component id="txtformCep" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
                                   <Component id="txtBairro" alignment="0" min="-2" pref="180" max="-2" attributes="0"/>
-                                  <Component id="txtformTelefone" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtformCPF" alignment="0" min="-2" pref="112" max="-2" attributes="0"/>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="txtformCPF" alignment="0" pref="104" max="32767" attributes="0"/>
+                                      <Component id="txtformTelefone" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="txtCidade" min="-2" pref="120" max="-2" attributes="0"/>
@@ -375,7 +377,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="12" max="32767" attributes="0"/>
+                  <EmptySpace pref="13" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel19" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="txtCod" alignment="3" min="-2" max="-2" attributes="0"/>
